# wallhavenapi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  whapi.pc.in  whapiConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in
include/whapi/: whapi.h  whcore.h  whdef.h  whparsed.h  whraw.h  whrawfile.h  whstr.h
src/: CMakeLists.txt  parse_funcs.c  parse_funcs.h  whapi.c  whcommon.c  whcommon.h  whcore.c  whparsed.c  whraw.c  whrawfile.c  whstr.c  whstr.h
test/: CMakeLists.txt  common.h  test.c  test_parsed.c  test_raw.c  test_raw_to_file.c
